fix: correction - contrast (text and background)

--- a/style.css
+++ b/style.css
@@ -790,21 +790,21 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-    background-color: #c27956;
+    background-color: #F3976C;
 }
 
 .tc-white {
     font-weight: 600;
-    color: #c27956!important;
+    color: #F3976C!important;
 }
 
 .btn-atomic-tangerine {
-    background: #c27956;
+    background: #F3976C;
     color: #FFFFFF!important;
 }
 
 .btn-atomic-tangerine:hover {
-    background: #c27956!important;
+    background: #F3976C!important;
     color: #FFFFFF!important;
 }
 
@@ -817,11 +817,11 @@ h4 {
 }
 
 .ltc-atomic-tangerine {
-    color: #c27956!important;
+    color: #F3976C!important;
 }
 
 .ltc-atomic-tangerine:hover {
-    color: #c27956!important;
+    color: #F3976C!important;
 }
 
 .icon-dark-slate-blue {
